tests/k8s/nfs.yml
apiVersion: apps/v1
kind: ReplicaSet
metadata:
  name: platformstoragenfs
spec:
  replicas: 1
  selector:
    matchLabels:
      service: platformstoragenfs
  template:
    metadata:
      labels:
        service: platformstoragenfs
      annotations:
        container.apparmor.security.beta.kubernetes.io/platformstoragenfs: unconfined
    spec:
      containers:
      - name: platformstoragenfs
        image: erichough/nfs-server:latest
        securityContext:
          capabilities:
            add: ["SYS_ADMIN"]
        env:
        - name: NFS_EXPORT_0
          value: "/var/storage    *(fsid=0,rw,sync,no_subtree_check)"
        volumeMounts:
        - name: storage
          mountPath: /var/storage
      volumes:
      - name: storage
        hostPath:
          path: /tmp
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: platformstoragenfs
spec:
  clusterIP: None
  ports:
  - protocol: TCP
    port: 2049
    targetPort: 2049
  selector:
    service: platformstoragenfs
