tests/k8s/platformapi.yml
apiVersion: apps/v1
kind: ReplicaSet
metadata:
  name: platformapi
spec:
  replicas: 1
  selector:
    matchLabels:
      service: platformapi
  template:
    metadata:
      labels:
        service: platformapi
    spec:
      containers:
      - name: platformapi
        image: platformapi-k8s:latest
        imagePullPolicy: Never
        env:
        - name: NP_K8S_API_URL
          value: http://localhost:8001
        - name: NP_K8S_AUTH_TYPE
          value: none
        - name: NP_STORAGE_HOST_MOUNT_PATH
          value: /tmp
      - name: kubeproxy
        image: lachlanevenson/k8s-kubectl:v1.10.3
        args: [proxy]
---
apiVersion: v1
kind: Service
metadata:
  name: platformapi
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    service: platformapi
