tests/k8s/platformconfig.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: platformconfig
data:
  clusters.json: |-
    [
        {
            "name": "test-cluster",

            "storage": {
                "host": {"mount_path": "/tmp"},
                "url": "http://platformapi/api/v1/storage"
            },

            "registry": {
                "url": "https://registry.dev.neuromation.io",
                "email": "registry@neuromation.io"
            },

            "orchestrator": {
                "kubernetes": {
                    "url": "http://localhost:8001",
                    "ca_data": "certificate",
                    "auth_type": "none",
                    "token": "token",
                    "namespace": "default",
                    "node_label_gpu": "cloud.google.com/gke-accelerator",
                    "node_label_preemptible": "cloud.google.com/gke-preemptible"
                },

                "is_http_ingress_secure": true,
                "job_hostname_template": "{job_id}.jobs.platform.dev.neuromation.io",
                "named_job_hostname_template": "{job_name}-{job_owner}.jobs.platform.dev.neuromation.io",

                "resource_pool_types": [
                    {"name": "node-pool"}
                ]
            },

            "monitoring": {
                "url": "http://platformapi/api/v1/jobs"
            },

            "secrets": {
                "url": "http://platformapi/api/v1/secrets"
            },

            "metrics": {
                "url": "http://metrics.dev.neu.ro"
            }
        }
    ]
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platformconfig
spec:
  replicas: 1
  selector:
    matchLabels:
      service: platformconfig
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: platformconfig
    spec:
      containers:
      - name: platformconfig
        image: platformconfig:latest
        imagePullPolicy: Never
        volumeMounts:
        - name: config-volume
          mountPath: /var/storage/neuromation/clusters
      volumes:
        - name: config-volume
          configMap:
            name: platformconfig
---
apiVersion: v1
kind: Service
metadata:
  name: platformconfig
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    service: platformconfig
