tests/k8s/platformjobsingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: platformjobsingress
spec:
  rules:
  - host: unknown
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: platformjobsingressauth
spec:
  rules:
  - host: unknown
