tests/k8s/platformnotificationsapi.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: platformnotificationsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      service: platformnotificationsapi
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: platformnotificationsapi
    spec:
      containers:
      - name: platformnotificationsapi
        image: platformnotificationsapi:latest
        imagePullPolicy: Never
        env:
          - name: NP_NOTIFICATIONS_PLATFORM_API_URL
            value: http://platformapi:8080/api/v1
          - name: NP_NOTIFICATIONS_PLATFORM_API_TOKEN
            value: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZGVudGl0eSI6ImNvbXB1dGUifQ.IJDlKCfbiuNGZH9Sh6p-CdUL5KxEK5JStqzfDk4-RAA
          - name: NP_NOTIFICATIONS_PLATFORM_AUTH_URL
            value: http://platformauthapi:8080
          - name: NP_NOTIFICATIONS_PLATFORM_AUTH_TOKEN
            value: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZGVudGl0eSI6ImNvbXB1dGUifQ.IJDlKCfbiuNGZH9Sh6p-CdUL5KxEK5JStqzfDk4-RAA
          - name: NP_NOTIFICATIONS_ZAPIER_URL
            value: https://hooks.zapier.com/hooks/catch/3799919/7ptotr/


---
apiVersion: v1
kind: Service
metadata:
  name: platformnotificationsapi
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    service: platformnotificationsapi
